--- a/src/index.css
+++ b/src/index.css
@@ -20,5 +20,8 @@ code {
   border-top-left-radius: 50% 50%; border-top-right-radius: 50% 50%; border-bottom-right-radius: 50% 50%; border-bottom-left-radius: 50% 50%; 
 }
 
-
+@media  only screen and (max-width: 600px) {
+  
+  
+}
 
