Go to Top Arrow added

--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,58 @@ code {
   
 }
 
+.go_to_top
+
+{
+
+  right:20px;
+
+  bottom: 20px;
+
+  position: fixed;
+
+  background-color: #d40d0d;
+
+  height: 40px;
+
+  width:40px;
+
+  display: flex;
+
+  justify-content: center;
+
+  align-items: center;
+
+  color: #000000;
+
+  font-size: 18px;
+
+  border-radius: 50%;
+
+  cursor: pointer;
+
+  z-index: 999;
+
+}
+
+.go_to_top i{
+
+  animation: goto 1.2s linear infinite alternate-reverse;
+
+}
+
+@keyframes goto {
+
+  0%{
+
+    transform: translateY(-5px);
+
+  }
+
+  100%{
+
+    transform: translateY(5px);
+
+  }
+
+}
